# PyCCCP

./: CCCP_Fit.ipynb  CCCP_Generate.ipynb  README.md  pyproject.toml
pycccp/: PDBIO.py  fitCrickBB.py  generateCrickBB.py
