[tool.poetry]
name = "pycccp"
version = "0.0.2"
description = "Fast and user-friendly coiled coil generation and fitting on Google Colab."
authors = [
    "Rian Kormos <rian.kormos@ucsf.edu>"
]
readme = "README.md"
license = "MIT, but separate licenses for the trained weights"
repository = "https://github.com/sokrypton/ColabFold"
classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = ">=3.7.1"
matplotlib = "^3.2.2"
numpy = "^1.24.0"
scipy = "^1.15.0"
numba = "^0.61.0"
biopython = "^1.71"
requests = "^2.26.0"
tqdm = "^4.62.2"
appdirs = "^1.4.4"
py3Dmol = "^2.0.1"
importlib-metadata = "^4.8.2"

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
